--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     text-align: center;
-    font-family: 'Merriweather', serif;
+    font-family: 'Roboto', sans-serif;
     height: 100vh;
     background-color: #0F1035;
 }
